Configure server block for cms.dev.eppsa.de domain

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,10 +25,20 @@ http {
 
     #gzip  on;
 
+    ssl_certificate           /etc/letsencrypt/live/eppsa.de/fullchain.pem;
+    ssl_certificate_key       /etc/letsencrypt/live/eppsa.de/privkey.pem;
+
+    ssl_session_cache   shared:SSL:10m;
+    ssl_session_timeout 10m;
+
+    ssl_prefer_server_ciphers on;
+    add_header Strict-Transport-Security max-age=15768000;
+
     client_max_body_size 0;
 
     upstream docker-cms {
       server frontend:8080;
+      server frontend:80;
     }
 
     upstream docker-git-json-api {
@@ -40,4 +50,6 @@ http {
     }
 
     include /etc/nginx/conf.d/*.conf;
+
+    include /etc/nginx/sites-enabled/*;
 }
