--- a/nginx/sites-available/cms.dev.eppsa.de.conf
+++ b/nginx/sites-available/cms.dev.eppsa.de.conf
@@ -1,20 +1,23 @@
 server {
   listen 443 ssl;
 
-  # server_name dev.eppsa.de;
+  server_name cms.dev.eppsa.de;
 
   ssl on;
 
-  ssl_certificate           /etc/letsencrypt/live/eppsa.de/fullchain.pem;
-  ssl_certificate_key       /etc/letsencrypt/live/eppsa.de/privkey.pem;
+  location / {
+    proxy_set_header        Host $host;
+    proxy_set_header        X-Real-IP $remote_addr;
+    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header        X-Forwarded-Proto $scheme;
 
-  ssl_session_cache   shared:SSL:10m;
-  ssl_session_timeout 10m;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
 
-  keepalive_timeout   70;
-
-  ssl_prefer_server_ciphers on;
-  add_header Strict-Transport-Security max-age=15768000;
+    proxy_pass http://docker-cms/;
+    proxy_redirect  off;
+  }
 
   location /assets/ {
     proxy_set_header        Host $host;
@@ -33,20 +36,6 @@ server {
     proxy_set_header        X-Forwarded-Proto $scheme;
 
     proxy_pass http://docker-git-json-api/;
-    proxy_redirect  off;
-  }
-
-  location / {
-    proxy_set_header        Host $host;
-    proxy_set_header        X-Real-IP $remote_addr;
-    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header        X-Forwarded-Proto $scheme;
-
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-
-    proxy_pass http://docker-cms/;
     proxy_redirect  off;
   }
 }
