--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -11,7 +11,7 @@ COPY conf.d/http-https-redirect.conf /etc/nginx/conf.d/http-https-redirect.conf
 COPY sites-available /etc/nginx/sites-available
 RUN mkdir /etc/nginx/sites-enabled
 RUN ln -s /etc/nginx/sites-available/cms.dev.eppsa.de.conf /etc/nginx/sites-enabled/
-RUN ln -s /etc/nginx/sites-available/game.dev.eppsa.de.conf /etc/nginx/sites-enabled/
+RUN ln -s /etc/nginx/sites-available/default.conf /etc/nginx/sites-enabled/
 
 RUN mkdir /etc/letsencrypt
 COPY letsencrypt /etc/letsencrypt
