--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -49,6 +49,10 @@ http {
       server asset-server:80;
     }
 
+    upstream docker-game-client {
+      server game-client:3000;
+    }
+
     include /etc/nginx/conf.d/*.conf;
 
     include /etc/nginx/sites-enabled/*;
