--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -11,3 +11,11 @@ services:
       dockerfile: Dockerfile.production
     environment:
       - PORT=80
+
+  game-client:
+    build:
+      dockerfile: Dockerfile.production
+
+  game-server:
+    build:
+      dockerfile: Dockerfile.production
