--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -10,7 +10,8 @@ COPY conf.d/http-https-redirect.conf /etc/nginx/conf.d/http-https-redirect.conf
 
 COPY sites-available /etc/nginx/sites-available
 RUN mkdir /etc/nginx/sites-enabled
-RUN ln -s /etc/nginx/sites-available/cms.dev.eppsa.de.conf /etc/nginx/sites-enabled/
+RUN ln -s /etc/nginx/sites-available/cms.eppsa.de.conf /etc/nginx/sites-enabled/
+RUN ln -s /etc/nginx/sites-available/game.eppsa.de.conf /etc/nginx/sites-enabled/
 RUN ln -s /etc/nginx/sites-available/default.conf /etc/nginx/sites-enabled/
 
 RUN mkdir /etc/letsencrypt
