--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -50,7 +50,11 @@ http {
     }
 
     upstream docker-game-client {
-      server game-client:3000;
+      server game-client:80;
+    }
+
+    upstream docker-game-server {
+      server game-server:80;
     }
 
     include /etc/nginx/conf.d/*.conf;
