--- a/nginx/sites-available/game.eppsa.de.conf
+++ b/nginx/sites-available/game.eppsa.de.conf
@@ -5,6 +5,41 @@ server {
 
   ssl on;
 
+  location /assets/ {
+    proxy_set_header        Host $host;
+    proxy_set_header        X-Real-IP $remote_addr;
+    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header        X-Forwarded-Proto $scheme;
+
+    proxy_pass http://docker-assets/;
+    proxy_redirect  off;
+  }
+
+  location /content/ {
+    proxy_set_header        Host $host;
+    proxy_set_header        X-Real-IP $remote_addr;
+    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header        X-Forwarded-Proto $scheme;
+
+    proxy_pass http://docker-git-json-api/;
+    proxy_redirect  off;
+  }
+
+  location  /server/ {
+    rewrite ^/server/(.*)$ /$1 break;
+
+    # /server/socket.io/?a=1 /socket.io?a=1
+
+    proxy_set_header        Host $host;
+    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+
+    proxy_pass http://docker-game-server;
+  }
+
   location / {
     proxy_set_header        Host $host;
     proxy_set_header        X-Real-IP $remote_addr;
