Reuse assets and content locations in nginx

--- a/nginx/sites-available/cms.eppsa.de.conf
+++ b/nginx/sites-available/cms.eppsa.de.conf
@@ -1,16 +1,7 @@
 server {
-  listen 443 ssl;
+  include /etc/nginx/config/eppsa.de.conf;
 
   server_name ~^cms\..+\.eppsa.de$;
-
-  ssl on;
-
-  proxy_set_header        Host $host;
-  proxy_set_header        X-Real-IP $remote_addr;
-  proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-  proxy_set_header        X-Forwarded-Proto $scheme;
-
-  proxy_redirect  off;
 
   location / {
     proxy_http_version 1.1;
@@ -18,13 +9,5 @@ server {
     proxy_set_header Connection "upgrade";
 
     proxy_pass http://docker-cms/;
-  }
-
-  location /assets/ {
-    proxy_pass http://docker-assets/;
-  }
-
-  location /content/ {
-    proxy_pass http://docker-git-json-api/;
   }
 }
