--- a/nginx/sites-available/game.eppsa.de.conf
+++ b/nginx/sites-available/game.eppsa.de.conf
@@ -1,24 +1,7 @@
 server {
-  listen 443 ssl;
+  include /etc/nginx/config/eppsa.de.conf;
 
   server_name ~^game\..+\.eppsa.de$;
-
-  ssl on;
-
-  proxy_set_header        Host $host;
-  proxy_set_header        X-Real-IP $remote_addr;
-  proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-  proxy_set_header        X-Forwarded-Proto $scheme;
-
-  proxy_redirect  off;
-
-  location /assets/ {
-    proxy_pass http://docker-assets/;
-  }
-
-  location /content/ {
-    proxy_pass http://docker-git-json-api/;
-  }
 
   location  /server/ {
     rewrite ^/server/(.*)$ /$1 break;
