Separate development and production configuration for nginx

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -2,9 +2,9 @@ version: "3.2"
 
 services:
   nginx:
-    ports:
-      - "80:80"
-      - "443:443"
+    build:
+      args:
+        environment: development
 
   frontend:
     build:
