--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,5 +1,7 @@
 FROM nginx:latest
 
+ARG environment
+
 RUN apt-get update && apt-get install -y git && apt-get install -y fcgiwrap
 
 RUN rm /etc/nginx/conf.d/default.conf
@@ -7,7 +9,8 @@ RUN rm /etc/nginx/nginx.conf
 
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY conf.d /etc/nginx/conf.d
-COPY sites-available /etc/nginx/sites-available
+COPY sites-available/default.conf /etc/nginx/sites-available/default.conf
+COPY sites-available/${environment}/* /etc/nginx/sites-available/
 COPY config /etc/nginx/config
 
 RUN mkdir /etc/nginx/sites-enabled
