--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,8 @@ services:
       - type: volume
         source: content
         target: /srv/content
+    ports:
+      - "81:80"
 
   frontend:
     build:
