Access content repo from the outside
git clone https://cms.<environment>.eppsa.de/git/content/

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -49,6 +49,10 @@ http {
       server asset-server:80;
     }
 
+    upstream docker-git-content-repo {
+      server content-repo:80;
+    }
+
     upstream docker-game-client {
       server game-client:80;
     }
