--- a/nginx/sites-available/production/cms.eppsa.de.conf
+++ b/nginx/sites-available/production/cms.eppsa.de.conf
@@ -6,4 +6,8 @@ server {
   location / {
     proxy_pass http://docker-cms/;
   }
+
+  location /git/content/ {
+    proxy_pass http://docker-git-content-repo;
+  }
 }
