Correct .gitmodules file

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,10 +6,10 @@
 	url = git@github.com:artcom/git-json-cms-asset-server.git
 [submodule "git-json-cms-frontend"]
 	path = git-json-cms-frontend
-	url = https://github.com/artcom/git-json-cms-frontend
+	url = git@github.com:artcom/git-json-cms-frontend
 [submodule "eppsa-mobile-game-client"]
 	path = eppsa-mobile-game-client
-	url = git@github.com:j-era/eppsa-mobile-game-client.git
+	url = git@github.com:artcom/eppsa-mobile-game-client.git
 [submodule "eppsa-mobile-game-server"]
 	path = eppsa-mobile-game-server
-	url = git@github.com:j-era/eppsa-mobile-game-server.git
+	url = git@github.com:artcom/eppsa-mobile-game-server.git
