--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    volumes:
+      - ${CERTIFICATE_PATH}:/certificate
 
   asset-server:
     build: ./git-json-cms-asset-server
