--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,8 +25,8 @@ http {
 
     #gzip  on;
 
-    ssl_certificate           /certificate/eppsa.de/fullchain.pem;
-    ssl_certificate_key       /certificate/eppsa.de/privkey.pem;
+    ssl_certificate           /certificate/fullchain.pem;
+    ssl_certificate_key       /certificate/privkey.pem;
 
     ssl_session_cache   shared:SSL:10m;
     ssl_session_timeout 10m;
