Add missing content location to development

--- a/nginx/sites-available/development/cms.eppsa.de.conf
+++ b/nginx/sites-available/development/cms.eppsa.de.conf
@@ -7,6 +7,10 @@ server {
     proxy_pass http://docker-cms/;
   }
 
+  location /git/content/ {
+    proxy_pass http://docker-git-content-repo;
+  }
+
   # Support for webpack-dev-server
   location /sockjs-node {
     proxy_http_version 1.1;
