--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -45,20 +45,20 @@ http {
       server git-json-api:80;
     }
 
-    upstream docker-assets {
+    upstream docker-asset-server {
       server asset-server:80;
     }
 
-    upstream docker-git-content-repo {
-      server content-repo:80;
+    upstream docker-content-server {
+      server content-server:80;
     }
 
     upstream docker-game-client {
-      server game-client:80;
+      server game:80;
     }
 
     upstream docker-game-server {
-      server game-server:80;
+      server server:80;
     }
 
     include /etc/nginx/conf.d/*.conf;
