--- a/nginx/sites-available/development/cms.eppsa.de.conf
+++ b/nginx/sites-available/development/cms.eppsa.de.conf
@@ -8,7 +8,7 @@ server {
   }
 
   location /git/content/ {
-    proxy_pass http://docker-git-content-repo;
+    proxy_pass http://docker-content-server;
   }
 
   # Support for webpack-dev-server
