--- a/nginx/sites-available/production/cms.eppsa.de.conf
+++ b/nginx/sites-available/production/cms.eppsa.de.conf
@@ -8,6 +8,6 @@ server {
   }
 
   location /git/content/ {
-    proxy_pass http://docker-git-content-repo;
+    proxy_pass http://docker-content-server;
   }
 }
