--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -36,29 +36,29 @@ http {
 
     client_max_body_size 0;
 
-    upstream docker-cms {
-      server frontend:443;
-      server frontend:80;
+    upstream docker-cms-frontend {
+      server cms-frontend:443;
+      server cms-frontend:80;
     }
 
-    upstream docker-git-json-api {
-      server git-json-api:80;
+    upstream docker-cms-content-server {
+      server cms-content-server:80;
     }
 
-    upstream docker-asset-server {
-      server asset-server:80;
+    upstream docker-cms-asset-server {
+      server cms-asset-server:80;
     }
 
-    upstream docker-content-server {
-      server content-server:80;
+    upstream docker-cms-content-repo {
+      server cms-content-repo:80;
     }
 
     upstream docker-game-client {
-      server game:80;
+      server game-client:80;
     }
 
     upstream docker-game-server {
-      server server:80;
+      server game-server:80;
     }
 
     include /etc/nginx/conf.d/*.conf;
