--- a/nginx/sites-available/production/cms.eppsa.de.conf
+++ b/nginx/sites-available/production/cms.eppsa.de.conf
@@ -4,10 +4,6 @@ server {
   server_name ~^cms\..+\.eppsa.de$;
 
   location / {
-    proxy_pass http://docker-cms/;
-  }
-
-  location /git/content/ {
-    proxy_pass http://docker-content-server;
+    proxy_pass http://docker-cms-frontend;
   }
 }
