--- a/nginx/sites-available/development/game-server.eppsa.de.conf
+++ b/nginx/sites-available/development/game-server.eppsa.de.conf
@@ -1,10 +1,14 @@
 server {
   include /etc/nginx/config/eppsa.de.conf;
 
-  server_name ~^cms\..+\.eppsa.de$;
+  server_name ~^game-server\..+\.eppsa.de$;
 
   location / {
-    proxy_pass http://docker-cms-frontend;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+
+    proxy_pass http://docker-game-server;
   }
 
   # Support for webpack-dev-server
@@ -13,6 +17,6 @@ server {
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
 
-    proxy_pass http://docker-cms-frontend;
+    proxy_pass http://docker-game-server;
   }
 }
