--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -45,8 +45,8 @@ http {
       server cms-content-server:80;
     }
 
-    upstream docker-cms-asset-server {
-      server cms-asset-server:80;
+    upstream docker-asset-server {
+      server asset-server:80;
     }
 
     upstream docker-cms-content-repo {
