--- a/nginx/sites-available/development/game.eppsa.de.conf
+++ b/nginx/sites-available/development/game.eppsa.de.conf
@@ -15,4 +15,13 @@ server {
 
     proxy_pass http://docker-game-client;
   }
+
+  location /socket.io/ {
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+
+      proxy_pass http://docker-game-server;
+    }
+
 }
