--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -41,16 +41,16 @@ http {
       server cms-frontend:80;
     }
 
-    upstream docker-cms-content-server {
-      server cms-content-server:80;
+    upstream docker-content-server {
+      server content-server:80;
     }
 
     upstream docker-asset-server {
       server asset-server:80;
     }
 
-    upstream docker-cms-content-repo {
-      server cms-content-repo:80;
+    upstream docker-content-repo {
+      server content-repo:80;
     }
 
     upstream docker-game-client {
