--- a/nginx/sites-available/development/content.eppsa.de.conf
+++ b/nginx/sites-available/development/content.eppsa.de.conf
@@ -4,6 +4,6 @@ server {
   server_name ~^content\..+\.eppsa.de$;
 
   location / {
-    proxy_pass http://docker-cms-content-repo;
+    proxy_pass http://docker-content-repo;
   }
 }
