--- a/nginx/sites-available/production/content-server.eppsa.de.conf
+++ b/nginx/sites-available/production/content-server.eppsa.de.conf
@@ -4,6 +4,6 @@ server {
   server_name ~^content-server\..+\.eppsa.de$;
 
   location / {
-    proxy_pass http://docker-cms-content-server;
+    proxy_pass http://docker-content-server;
   }
 }
