Add mongoDB server to environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,6 +66,12 @@ services:
       context: ./game-server
     environment:
       PORT: 80
+    depends_on:
+      - mongo
+
+  mongo:
+    image: "mongo:3.6.3-jessie"
+
 
 volumes:
   content:
