--- a/game-client/package.json
+++ b/game-client/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "lint": "eslint src",
-    "watch": "webpack-dev-server --mode development --disable-host-check --host 0.0.0.0 --port $PORT",
+    "watch": "webpack-dev-server --mode development --port $PORT",
     "start": "webpack --mode production && http-server ./dist -p $PORT -c 0"
   },
   "engines": {
