Add data volume to mongodb

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,8 +74,13 @@ services:
     image: "mongo:3.6.3-jessie"
     ports:
       - "27017:27017"
+    volumes:
+      - type: volume
+        source: mongoDB
+        target: /data/db
 
 
 volumes:
   content:
   assets:
+  mongoDB:
