--- a/game-server/package.json
+++ b/game-server/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint src",
     "debug": "node --inspect-brk ./src/index.js",
     "start": "node ./src/index.js",
-    "watch": "nodemon ./src/index.js"
+    "watch": "nodemon -L ./src/index.js"
   },
   "repository": {
     "type": "git",
