Add client side certificate authentication

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -28,6 +28,10 @@ http {
     ssl_certificate           /certificate/fullchain.pem;
     ssl_certificate_key       /certificate/privkey.pem;
 
+    ssl_client_certificate    /certificate/ssl/ca/certs/ca.crt;
+    ssl_crl                   /certificate/ssl/ca/private/ca.crl;
+    ssl_verify_client         on;
+
     ssl_session_cache   shared:SSL:10m;
     ssl_session_timeout 10m;
 
