Add button challenge to environment

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -30,3 +30,10 @@ services:
     volumes:
       - ./game-server:/app
       - /app/node_modules
+
+  game-challenge-button:
+    build:
+      dockerfile: Dockerfile.development
+    volumes:
+      - ./game-challenge/button:/app
+      - /app/node_modules
