--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -21,3 +21,7 @@ services:
   game-server:
     build:
       dockerfile: Dockerfile.production
+
+  game-challange-button:
+    build:
+      dockerfile: Dockerfile.production
