--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -58,6 +58,10 @@ http {
       server game-client:80;
     }
 
+    upstream docker-game-challenge-button {
+       server game-challenge-button:3000;
+     }
+
     upstream docker-game-server {
       server game-server:3000;
     }
