--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,6 +69,10 @@ services:
     depends_on:
       - mongo
 
+  game-challenge-button:
+    build:
+      context: ./game-challenge/button
+
   mongo:
     image: "mongo:3.6.3-jessie"
     ports:
