--- a/game-client/package.json
+++ b/game-client/package.json
@@ -27,6 +27,9 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.6",
     "http-server": "^0.11.1",
+    "lodash.mapvalues": "^4.6.0",
+    "lodash.omit": "^4.5.0",
+    "querystring": "^0.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
