Add game-challenge-button dependency to game-client

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,7 @@ services:
       - content-server
       - asset-server
       - game-server
+      - game-challenge-button
 
   game-server:
     build:
