--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -59,8 +59,16 @@ http {
     }
 
     upstream docker-game-challenge-button {
-       server game-challenge-button:3000;
-     }
+      server game-challenge-button:3000;
+    }
+
+    upstream docker-game-challenge-hunt-client {
+      server game-challenge-hunt-client:80;
+    }
+
+    upstream docker-game-challenge-hunt-server {
+      server game-challenge-hunt-server:80;
+    }
 
     upstream docker-game-server {
       server game-server:3000;
