--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -35,5 +35,21 @@ services:
     build:
       dockerfile: Dockerfile.development
     volumes:
-      - ./game-challenge/button:/app
+      - ./game-challenge/hunt:/app
+      - /app/node_modules
+
+  game-challenge-hunt-client:
+    build:
+      dockerfile: Dockerfile.development
+    volumes:
+      - ./game-challenge/hunt/eppsa-mobile-game-client:/app
+      - /app/node_modules
+    environment:
+      WS_SERVER_PATH: /server
+
+  game-challenge-hunt-server:
+    build:
+      dockerfile: Dockerfile.development
+    volumes:
+      - ./game-challenge/hunt/eppsa-mobile-game-server:/app
       - /app/node_modules
