--- a/game-challenge/button/Dockerfile.production
+++ b/game-challenge/button/Dockerfile.production
@@ -10,6 +10,8 @@ COPY package-lock.json /app/package-lock.json
 RUN npm install
 
 COPY src /app/src
+COPY public /app/public
+RUN npm run build
 
 # start app
-CMD ["npm", "run", "build"]
+CMD ["npm", "run", "serve"]
