--- a/game-challenge/button/package.json
+++ b/game-challenge/button/package.json
@@ -12,10 +12,12 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
+    "serve": "^6.5.3",
     "styled-components": "^3.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
+    "serve":  "serve -C -s build -p 3000",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
