Add build arg to production

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -15,8 +15,6 @@ services:
   game-client:
     build:
       dockerfile: Dockerfile.production
-      args:
-        WS_SERVER_PATH: /game-server
 
   game-server:
     build:
@@ -29,8 +27,8 @@ services:
   game-challenge-hunt-client:
     build:
       dockerfile: Dockerfile.production
-    environment:
-      WS_SERVER_PATH: /server
+      args:
+        WS_SERVER_PATH: "/server"
 
   game-challenge-hunt-server:
     build:
