--- a/game-server/package.json
+++ b/game-server/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/artcom/eppsa-ksm-server#readme",
   "dependencies": {
+    "bunyan": "^1.8.12",
     "eslint": "^4.18.2",
     "eslint-config-artcom": "^0.7.0",
     "eslint-plugin-import": "^2.9.0",
