--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -74,6 +74,10 @@ http {
       server game-challenge-phaser-demo:80;
     }
 
+    upstream docker-game-challenge-quiz {
+      server game-challenge-quiz:3000;
+    }
+
     upstream docker-game-server {
       server game-server:3000;
     }
