--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -37,3 +37,7 @@ services:
   game-challenge-phaser-demo:
     build:
       dockerfile: Dockerfile.production
+
+  game-challenge-quiz:
+    build:
+      dockerfile: Dockerfile.production
