--- a/game-challenge/quiz/package.json
+++ b/game-challenge/quiz/package.json
@@ -10,6 +10,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "react": "^16.2.0",
+    "react-autobind": "^1.0.6",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
     "serve": "^6.5.3",
