--- a/game-challenge/quiz/package.json
+++ b/game-challenge/quiz/package.json
@@ -9,6 +9,7 @@
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
+    "lodash": "^4.17.5",
     "react": "^16.2.0",
     "react-autobind": "^1.0.6",
     "react-dom": "^16.2.0",
