Integrate sorting game

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -47,6 +47,15 @@ services:
       - ./game-challenge/button:/app
       - /app/node_modules
 
+   game-challenge-sorting:
+     build:
+       dockerfile: Dockerfile.development
+     volumes:
+       - ./game-challenge/sorting:/app
+       - /app/node_modules
+     ports:
+       - 8080:80
+
   game-challenge-quiz:
     build:
       dockerfile: Dockerfile.development
