Add phaser demo

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -53,3 +53,10 @@ services:
     volumes:
       - ./game-challenge/hunt/eppsa-mobile-game-server:/app
       - /app/node_modules
+
+  game-challenge-phaser-demo:
+    build:
+      dockerfile: Dockerfile.development
+    volumes:
+      - ./game-challenge/phaser-demo:/app
+      - /app/node_modules
