--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -70,6 +70,10 @@ http {
       server game-challenge-hunt-server:80;
     }
 
+    upstream docker-game-challenge-phaser-demo {
+      server game-challenge-phaser-demo:80;
+    }
+
     upstream docker-game-server {
       server game-server:3000;
     }
