--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -31,6 +31,10 @@ services:
       - ./game-server:/app
       - /app/node_modules
 
+  mongo:
+    ports:
+      - "27017:27017"
+
   game-challenge-button:
     build:
       dockerfile: Dockerfile.development
