--- a/game-challenge/button/package.json
+++ b/game-challenge/button/package.json
@@ -11,6 +11,7 @@
     "eslint-plugin-react": "^7.7.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-qr-reader": "^2.1.0",
     "react-scripts": "1.1.1",
     "serve": "^6.5.3",
     "styled-components": "^3.2.2"
