--- a/game-challenge/phaser-demo/package.json
+++ b/game-challenge/phaser-demo/package.json
@@ -26,6 +26,7 @@
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
+    "http-server": "^0.11.1",
     "jest": "20.0.4",
     "object-assign": "4.1.1",
     "phaser": "^3.3.0",
