--- a/nginx/sites-available/production/quiz.eppsa.de.conf
+++ b/nginx/sites-available/production/quiz.eppsa.de.conf
@@ -1,7 +1,7 @@
 server {
   include /etc/nginx/config/eppsa.de.conf;
 
-  server_name "~^station-\d{1,2}-quiz\..+\.eppsa.de$";
+  server_name "~^quiz\..+\.eppsa.de$";
 
   location / {
     proxy_pass http://docker-game-challenge-quiz/;
