--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,6 +76,8 @@ services:
   game-challenge-button:
     build:
       context: ./game-challenge/button
+    environment:
+      PORT: 80
 
   game-challenge-hunt-client:
     build:
@@ -98,6 +100,8 @@ services:
   game-challenge-quiz:
     build:
       context: ./game-challenge/quiz
+    environment:
+      PORT: 80
 
   mongo:
     image: "mongo:3.6.3-jessie"
